--- a/src/main/resources/cincuentazo/fxml/ventana-ganador-view.fxml
+++ b/src/main/resources/cincuentazo/fxml/ventana-ganador-view.fxml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CONTROLLER_NAME"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox alignment="CENTER" prefHeight="330" prefWidth="500" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controllers.VentanaGanadorController">
 
-</AnchorPane>
+    <padding>
+        <Insets bottom="20" left="20" right="20" top="20" />
+    </padding>
+   <ImageView fitHeight="115.0" fitWidth="296.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../images/ganador-texto.JPG" />
+      </image>
+   </ImageView>
+
+    <!-- Imagen superior -->
+    <ImageView fx:id="imgGanador" fitHeight="181.0" fitWidth="185.0">
+      <image>
+         <Image url="@../images/bellota.png" />
+      </image></ImageView>
+   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+      <children>
+         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../images/bellota-fruta.png" />
+            </image>
+            <HBox.margin>
+               <Insets right="15.0" />
+            </HBox.margin>
+         </ImageView>
+      
+          <!-- Texto del ganador -->
+          <Label fx:id="lblGanador" style="-fx-font-weight: bold;" text="¡Ganador del Cincuentazo!" textFill="#fcfcfc">
+            <font>
+               <Font name="Comic Sans MS" size="21.0" />
+            </font>
+         </Label>
+         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="110.9">
+            <image>
+               <Image url="@../images/bellota-fruta.png" />
+            </image>
+            <HBox.margin>
+               <Insets left="15.0" />
+            </HBox.margin>
+         </ImageView>
+      </children>
+   </HBox>
+
+    <!-- Contenedor de botones -->
+    <HBox alignment="CENTER" spacing="15">
+        <Button fx:id="btnNuevoJuego" onAction="#botonIniciarNuevoJuego" style="-fx-background-color: #62ae1e; -fx-background-radius: 15; -fx-padding: 8 20;" text="Nuevo juego">
+         <font>
+            <Font name="Comic Sans MS" size="16.0" />
+         </font></Button>
+
+        <Button fx:id="btnSalir" onAction="#botonSalir" style="-fx-background-color: #c6c6c6; -fx-background-radius: 15; -fx-padding: 8 20;" text="Salir">
+         <font>
+            <Font name="Comic Sans MS" size="16.0" />
+         </font></Button>
+    </HBox>
+
+</VBox>
