--- a/src/main/resources/cincuentazo/fxml/inicio-view.fxml
+++ b/src/main/resources/cincuentazo/fxml/inicio-view.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="457.0" prefWidth="697.0" style="-fx-background-color: #D6E8FF; -fx-border-color: blue; -fx-border-width: 3;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="457.0" prefWidth="697.0" style="-fx-background-color: #D6E8FF; -fx-border-color: blue; -fx-border-width: 3;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controllers.InicioController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.20001220703125" minWidth="10.0" prefWidth="223.4000244140625" />
@@ -81,7 +81,7 @@
             <Insets right="50.0" />
          </GridPane.margin>
       </ImageView>
-      <Button contentDisplay="TEXT_ONLY" graphicTextGap="2.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="156.0" style="-fx-background-color: #000993; -fx-background-radius: 50%;" text="JUGAR" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+      <Button fx:id="btnJugar" contentDisplay="TEXT_ONLY" graphicTextGap="2.0" mnemonicParsing="false" onAction="#onActionJugar" prefHeight="44.0" prefWidth="156.0" style="-fx-background-color: #000993; -fx-background-radius: 50%;" text="JUGAR" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
          <font>
             <Font name="Comic Sans MS" size="20.0" />
          </font>
@@ -110,7 +110,7 @@
             <Insets />
          </GridPane.margin>
       </Button>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" style="-fx-background-color: #000993;" text="?" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BASELINE">
+      <Button fx:id="btnReglas" alignment="CENTER" mnemonicParsing="false" onAction="#onActionMostrarReglas" prefHeight="32.0" prefWidth="32.0" style="-fx-background-color: #000993;" text="?" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BASELINE">
          <GridPane.margin>
             <Insets right="20.0" top="10.0" />
          </GridPane.margin>
@@ -181,7 +181,7 @@
                   <Font name="Comic Sans MS" size="19.0" />
                </font>
             </Label>
-            <TextField alignment="CENTER" prefHeight="14.0" prefWidth="150.0" style="-fx-background-color: #EEEBFF;">
+            <TextField fx:id="textFieldNombre" alignment="CENTER" prefHeight="14.0" prefWidth="150.0" style="-fx-background-color: #EEEBFF;" text="Jugador">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
@@ -231,7 +231,7 @@
                   <Font name="Comic Sans MS" size="16.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="1" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+            <Button fx:id="btnUnJugador" mnemonicParsing="false" onAction="#onActionSeleccionarUnJugador" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="1" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                <GridPane.margin>
                   <Insets left="20.0" />
                </GridPane.margin>
@@ -256,7 +256,7 @@
                   </DropShadow>
                </effect>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="2" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BASELINE">
+            <Button fx:id="btnDosJugadores" mnemonicParsing="false" onAction="#onActionSeleccionarDosJugadores" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="2" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BASELINE">
                <font>
                   <Font name="Comic Sans MS" size="17.0" />
                </font>
@@ -278,7 +278,7 @@
                   </DropShadow>
                </effect>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="3" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+            <Button fx:id="btnTresJugadores" mnemonicParsing="false" onAction="#onActionSeleccionarTresJugadores" prefHeight="34.0" prefWidth="31.0" style="-fx-background-color: #000993;" text="3" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                <font>
                   <Font name="Comic Sans MS" size="17.0" />
                </font>
