--- a/src/main/resources/cincuentazo/fxml/ventana-ganador-view.fxml
+++ b/src/main/resources/cincuentazo/fxml/ventana-ganador-view.fxml
@@ -9,19 +9,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="330" prefWidth="500" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controllers.VentanaGanadorController">
+<VBox alignment="CENTER" prefHeight="621.0" prefWidth="543.0" spacing="20" style="-fx-background-color: #42672a;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cincuentazo.controllers.VentanaGanadorController">
 
     <padding>
         <Insets bottom="20" left="20" right="20" top="20" />
     </padding>
-   <ImageView fitHeight="115.0" fitWidth="296.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fitHeight="215.0" fitWidth="396.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@../images/ganador-texto.JPG" />
       </image>
    </ImageView>
 
     <!-- Imagen superior -->
-    <ImageView fx:id="imgGanador" fitHeight="181.0" fitWidth="185.0">
+    <ImageView fx:id="imgGanador" fitHeight="246.0" fitWidth="250.0">
       <image>
          <Image url="@../images/bellota.png" />
       </image></ImageView>
@@ -39,7 +39,7 @@
           <!-- Texto del ganador -->
           <Label fx:id="lblGanador" style="-fx-font-weight: bold;" text="¡Ganador del Cincuentazo!" textFill="#fcfcfc">
             <font>
-               <Font name="Comic Sans MS" size="21.0" />
+               <Font name="Comic Sans MS" size="24.0" />
             </font>
          </Label>
          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="110.9">
@@ -55,14 +55,14 @@
 
     <!-- Contenedor de botones -->
     <HBox alignment="CENTER" spacing="15">
-        <Button fx:id="btnNuevoJuego" onAction="#botonIniciarNuevoJuego" style="-fx-background-color: #62ae1e; -fx-background-radius: 15; -fx-padding: 8 20;" text="Nuevo juego">
+        <Button fx:id="btnNuevoJuego" onAction="#botonIniciarNuevoJuego" prefHeight="48.0" prefWidth="168.0" style="-fx-background-color: #62ae1e; -fx-background-radius: 15; -fx-padding: 8 20;" text="Nuevo juego">
          <font>
-            <Font name="Comic Sans MS" size="16.0" />
+            <Font name="Comic Sans MS" size="20.0" />
          </font></Button>
 
-        <Button fx:id="btnSalir" onAction="#botonSalir" style="-fx-background-color: #c6c6c6; -fx-background-radius: 15; -fx-padding: 8 20;" text="Salir">
+        <Button fx:id="btnSalir" onAction="#botonSalir" prefHeight="49.0" prefWidth="96.0" style="-fx-background-color: #c6c6c6; -fx-background-radius: 15; -fx-padding: 8 20;" text="Salir">
          <font>
-            <Font name="Comic Sans MS" size="16.0" />
+            <Font name="Comic Sans MS" size="20.0" />
          </font></Button>
     </HBox>
 
